# Medical-Image-Semantic-Segmentation

./: .gitignore  README.md  pyproject.toml
glomeruli_detection/: README.md  settings.py
glomeruli_detection/preprocessing/: README.md  dataset_information.py  patching.py  wsi_information.py  wsi_utils.py
glomeruli_detection/semantic_segmentation/: README.md  test_model.py  train_model.py
glomeruli_detection/semantic_segmentation/models/: segnet_vgg16.py
glomeruli_detection/semantic_segmentation/src/: loaders.py  loss_functions.py  metrics.py  testing.py  training.py  transformations.py
glomeruli_detection/semantic_segmentation/utils/: file_utils.py  plot_utils.py
glomeruli_detection/utils/: file_utils.py  plot_utils.py  wsi_utils.py
