[tool.poetry]
name = "glomeruli-detection"
version = "0.1.0"
description = "Semantic Segmentation of Glomeruli in Whole Slide Images"
authors = ["Manuel Escobar Ferrer <manuelescobar.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
openslide-bin = "^4.0.0.6"
openslide-python = "^1.4.1"
scikit-image = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"